@@ -20,15 +20,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 213)
-(Parent-Version lpmud 3-3 212)
-(Version-Log "Small correction to lp-245.
-The GC probably clobbered the list of destructed objects.
-If a variable was inherited multiple times, the driver generated a senseless warning.
-Corrected a but in regreplace().")
+(Project-Version lpmud 3-3 214)
+(Parent-Version lpmud 3-3 213)
+(Version-Log "regmatch() returns 0 instead of the empty string for non-matches.
+regmatch() can take and return a start index for matches.")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 15 Jul 2002 19:21:33 -0600")
+(Checkin-Time "Tue, 16 Jul 2002 15:27:55 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -62,7 +60,7 @@ Corrected a but in regreplace().")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.6 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.41 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.276 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.277 644))
   (HISTORY (lpmud/f/49_HISTORY 1.257 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.14 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -132,8 +130,8 @@ Corrected a but in regreplace().")
   (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.10 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.5 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.20 644))
-  (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.14 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.31 644))
+  (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.15 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.32 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.21 644))
   (src/files.h (lpmud/I/49_files.h 1.1 644))
   (src/files.c (lpmud/I/50_files.c 1.15 644))
@@ -213,7 +211,7 @@ Corrected a but in regreplace().")
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.11 644))
   (src/port.c (lpmud/39_port.c 1.17.1.6 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.14 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.22 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.23 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -244,7 +242,7 @@ Corrected a but in regreplace().")
   (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.8 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.10 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.11 644))
   (src/string_spec (lpmud/F/6_string_spe 1.14.1.4 644))
   (src/mkfunc.c (lpmud/L/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.23 644))
@@ -489,7 +487,7 @@ Corrected a but in regreplace().")
   (src/bugs/b-020425-0 (lpmud/V/39_b-020425-0 1.1 644) :no-keywords)
   (src/bugs/b-020506 (lpmud/V/41_b-020506 1.1 644) :no-keywords)
 
-  (src/bugs/f-summary (lpmud/C/37_f-summary 1.39.1.69 644) :no-keywords)
+  (src/bugs/f-summary (lpmud/C/37_f-summary 1.39.1.70 644) :no-keywords)
   (src/bugs/f-981027-0 (lpmud/g/29_f-981027-0 1.2 644) :no-keywords)
   (src/bugs/f-981027-1 (lpmud/g/28_f-981027-1 1.2 644) :no-keywords)
   (src/bugs/f-981027-2 (lpmud/g/27_f-981027-2 1.2 644) :no-keywords)
@@ -637,7 +635,7 @@ Corrected a but in regreplace().")
   (src/bugs/f-010318 (lpmud/L/7_f-010318 1.1 644) :no-keywords)
   (src/bugs/f-010320 (lpmud/L/8_f-010320 1.1 644) :no-keywords)
   (src/bugs/f-010406-0 (lpmud/L/21_f-010406-0 1.6 644) :no-keywords)
-  (src/bugs/f-010406-2 (lpmud/T/23_f-010406-2 1.6 644) :no-keywords)
+  (src/bugs/f-010406-2 (lpmud/T/23_f-010406-2 1.7 644) :no-keywords)
   (src/bugs/f-010411 (lpmud/L/29_f-010411 1.1 644) :no-keywords)
   (src/bugs/f-010516-1 (lpmud/M/2_f-010516-1 1.2 644) :no-keywords)
   (src/bugs/f-010516-0 (lpmud/M/3_f-010516-0 1.1 644) :no-keywords)
@@ -710,6 +708,7 @@ Corrected a but in regreplace().")
   (src/bugs/f-020507-1 (lpmud/V/48_f-020507-1 1.2 644) :no-keywords)
   (src/bugs/f-020507-2 (lpmud/V/49_f-020507-2 1.1 644) :no-keywords)
   (src/bugs/f-020507-3 (lpmud/V/50_f-020507-3 1.1 644) :no-keywords)
+  (src/bugs/f-020523 (lpmud/W/10_f-020523 1.1 644) :no-keywords)
   (src/bugs/f-020528 (lpmud/W/2_f-020528 1.1 644) :no-keywords)
   (src/bugs/f-020604 (lpmud/W/9_f-020604 1.1 644) :no-keywords)
   (src/bugs/f-020611 (lpmud/W/4_f-020611 1.1 644) :no-keywords)
@@ -1052,7 +1051,7 @@ Corrected a but in regreplace().")
   (doc/efun/referencep (lpmud/p/41_referencep 1.5 644))
   (doc/efun/regexp (lpmud/p/42_regexp 1.1.1.5 644))
   (doc/efun/regexplode (lpmud/p/43_regexplode 1.5 644))
-  (doc/efun/regmatch (lpmud/V/26_regmatch 1.2 644))
+  (doc/efun/regmatch (lpmud/V/26_regmatch 1.3 644))
   (doc/efun/regreplace (lpmud/p/44_regreplace 1.8 644))
   (doc/efun/remove_action (lpmud/p/45_remove_act 1.3 644))
   (doc/efun/remove_call_out (lpmud/p/46_remove_cal 1.2 644))
