@@ -1,0 +1,30 @@
+Short: Add Perl Regex modifiers to ed()
+Date: Thu, 23 May 2002 10:00:56 -0600
+From: Lars Duening <c-lars.duening@wcom.com>
+Type: Feature
+State: New
+See: f-010406-2
+
+i  Do case-insensitive pattern matching.
+If use locale is in effect, the case map is taken from the current 
+locale. See perllocale.
+
+m  Treat string as multiple lines. That is, change "^" and "$" from 
+matching the start or end of the string to matching the start or end 
+of any line anywhere within the string.
+
+s  Treat string as single line. That is, change "." to match any 
+character whatsoever, even a newline, which normally it would not 
+match.
+
+The /s and /m modifiers both override the $* setting. That is, no 
+matter what $* contains, /s without /m will force "^" to match only 
+at the beginning of the string and "$" to match only at the end (or 
+just before a newline at the end) of the string. Together, as /ms, 
+they let the "." match any character whatsoever, while yet allowing 
+"^" and "$" to match, respectively, just after and just before 
+newlines within the string.
+
+x  Extend your pattern's legibility by permitting whitespace and 
+comments.
+
