@@ -119,6 +119,7 @@ f-020328-0: Introduce 'regexp' LPC datatype
 f-020331: Efun this_function()
 f-020404: New efun strreplace()
 f-020507-2: Slicing mappings
+f-020523: Add Perl Regex modifiers to ed()
 
 
 Language
