@@ -347,7 +347,7 @@ string  md5_crypt(string, string|int default: F_CONST0);
 string *regexp(string *, string, int default: F_CONST0);
 string *regexplode(string, string, int default: F_CONST0);
 string  regreplace(string,string,closure|string,int);
-mixed   regmatch(string,string,int default: F_CONST0);
+mixed   regmatch(string,string, void|int, void|int);
 void    printf(string, ...);
 string  sprintf(string, ...);
 int     strstr(string, string, int default: F_CONST0);
